dnl # -*- sh -*-
dnl # Check for unique file

AC_INIT(Flek/Fl_App_Window.H)

AC_PROG_RANLIB

LIBNAME="libflek_ui"
if test "$RANLIB" != ":"; then
  LIBCOMMAND="ar cr"
else
  LIBCOMMAND="ar crs"
fi
DSOCOMMAND="echo"
DSONAME=""

AC_ARG_ENABLE(shared, [  --enable-shared         turn on shared libraries [default=no]],[
if eval "test x$enable_shared = xyes"; then
  PICFLAG=1
  DSOLIBNAME="libflek_ui"
  case $uname in
      SunOS* | UNIX_S*)
	  DSOEXT=".so.2"
	  DSOCOMMAND="\$(CXX) -Wl,-h,\$@ \$(LDLIBS) -G $DEBUGFLAG -o"
	  ;;
      HP-UX*)
	  DSOEXT=".s1.2"
	  DSOCOMMAND="ld -b -z +h \$@ $DEBUGFLAG -o"
	  ;;
      OSF1*)
	  DSOEXT=".so.2"
          DSOCOMMAND="\$(CXX) -Wl,-soname,\$@ \$(LDLIBS) -shared $DEBUGFLAG -o"
cd 	  ;;
      IRIX*)
	  DSOEXT=".so.2"
          DSOCOMMAND="\$(CXX) -soname \$@ \$(LDLIBS) -shared $DEBUGFLAG -o"
	  ;;
      CYGWIN*)
	  DLLCFLAGS="-DFL_DLL -DFL_LIBRARY"
	  DSOEXT=".dll"
          DSOCOMMAND="dllwrap --export-all --target i386-mingw32 \
	--implib ../lib/libflekdll.2.a \
	--output-exp ../lib/libflekdll.2.exp \
	--driver-name \$(CXX)"
	  PICFLAG=0
	  ;;
      *)
          echo "Warning: shared libraries may not be supported.  Trying -shared"
	  echo "         option with compiler."
	  DSOEXT=".so.2"
          DSOCOMMAND="\$(CXX) -Wl,-soname,\$@ -shared $DEBUGFLAG -o"
	  ;;
  esac
fi])

dnl # Check for programs..

AC_PROG_CC
AC_PROG_CXX

uname=`uname`
uversion=`uname -r | sed -e '1,$s/\.//g'`
if test "$uname" = "IRIX64"; then
    uname="IRIX"
fi

dnl All tests done with the C++ compiler...
AC_LANG_CPLUSPLUS

FLTKDIR=""
FLTKLIB=""
FLTKINC=""
FLTKFLAGS=""

AC_ARG_WITH([fltk-dir], 
  [ --with-fltk-dir=dir specify the Fltk source dir], 
  [ 
    FLTKDIR="$withval"
    FLTKLIB="-L$withval/lib"
    FLTKINC="-I$withval"
  ], [])

AC_ARG_WITH([fltk2], 
  [ --with-fltk2], 
  [ 
    FLTKFLAGS="-DFLTK_2"
  ], [])

HAVEGL=""
AC_ARG_WITH([no-gl], 
  [ --with-no-gl], 
  [ 
    HAVEGL="-DNO_GL"
  ], [])

AC_SUBST(HAVEGL)
AC_SUBST(FLTKDIR)
AC_SUBST(FLTKLIB)
AC_SUBST(FLTKINC)
AC_SUBST(FLTKFLAGS)

AC_PATH_XTRA
if test "$X_PRE_LIBS" != ""; then
        echo "Ignoring libraries \"$X_PRE_LIBS\" requested by configure."
fi
if test "$X_LIBS" = " -L/usr/lib"; then
        echo "Ignoring X library directory \"$X_LIBS\" requested by configure."
        X_LIBS=""
fi

AC_CHECK_LIB(fltk,numericsort,X_LIBS="$X_LIBS -lfltk -lX11 -lXext"
AC_DEFINE(HAVE_LIBFLTK))

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for string functions.
AC_CHECK_FUNCS(strdup)
AC_CHECK_FUNCS(strcasecmp)
AC_CHECK_FUNCS(strncasecmp)

LIBS="$LIBS$X_LIBS"
CFLAGS="$CFLAGS $X_CFLAGS"
CPPFLAGS="$CPPFLAGS $X_CFLAGS"

MAKEDEPEND="\$(CXX) -M"

dnl# add warnings to compiler switches:
dnl# do this last so messing with switches does not break tests
if test -n "$GXX"; then
    CFLAGS="-Wall $CFLAGS"
    CXXFLAGS="-Wall -Wno-return-type $CXXFLAGS"
    if test -z "$DEBUGFLAG"; then
        CFLAGS="-O2 $CFLAGS"
        CXXFLAGS="-O2 $CXXFLAGS"
    fi
    if test "$PICFLAG" = 1; then
    	CFLAGS="-fPIC $CFLAGS"
    	CXXFLAGS="-fPIC $CXXFLAGS"
    fi
else
    case `(uname) 2>/dev/null` in
        IRIX*)
	    # Running some flavor of IRIX; see which version and
	    # set things up according...
	    if test "$uversion" -ge 62; then
	        # We are running IRIX 6.2 or higher; uncomment the following
		# lines if you don't have IDO 7.2 or higher:
		#
		#     CXX="CC -n32"
		#     CC="cc -n32"
		#     LD="ld -n32"
		#     MAKEDEPEND="CC -M"

        	# -woff 3322 is necessary due to errors in Xlib headers on IRIX
        	CFLAGS="-fullwarn $CFLAGS"
        	CXXFLAGS="-fullwarn -woff 3322 $CXXFLAGS"
	    else
        	CXXFLAGS="+w +pp $CXXFLAGS"
	    fi
	    if test -z "$DEBUGFLAG"; then
        	CFLAGS="-O2 $CFLAGS"
        	CXXFLAGS="-O2 $CXXFLAGS"
	    fi
	    ;;
	HP-UX*)
	    # Running HP-UX; these options should work for the HP compilers.
	    if test -z "$DEBUGFLAG"; then
		CFLAGS="+O2 $CFLAGS"
		CXXFLAGS="+O2 +W336,501,736,740,749,829 $CXXFLAGS"
	    fi
	    ;;
	*)
	    # Running some other operating system; inform the user they
	    # should contribute the necessary options to fltk-bugs@easysw.com...
	    ;;
    esac
fi

CFLAGS="$DEBUGFLAG $CFLAGS"
CXXFLAGS="$DEBUGFLAG $CXXFLAGS"

AC_SUBST(MAKEDEPEND)
AC_SUBST(DSOEXT)
AC_SUBST(DSOCOMMAND)
AC_SUBST(LIBNAME)
AC_SUBST(DSOLIBNAME)
AC_SUBST(LIBCOMMAND)
AC_OUTPUT(makeinclude)

dnl#
dnl# End of "$Id: configure.in,v 1.5 2000/02/03 16:57:03 jamespalmer Exp $".
dnl#
